--- a/registration.html
+++ b/registration.html
@@ -9,14 +9,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
-            background-color: #b4cfea;
+            background-color: #bcc4cc;
         }
 
         .registration-form {
             max-width: 600px;
             margin: 50px auto;
             padding: 20px;
-            background: #fff;
+            background: #884949;
             border-radius: 8px;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
         }
@@ -27,12 +27,12 @@
         }
 
         .btn-custom {
-            background-color: #007bff;
-            color: white;
+            background-color: #167ce8;
+            color: rgb(247, 234, 234);
         }
 
         .btn-custom:hover {
-            background-color: #0056b3;
+            background-color: #1b5ea5;
         }
     </style>
 </head>
@@ -43,7 +43,7 @@
         <div class="registration-form">
             <div class="form-header">
                 <h3>Student Event Registration</h3>
-                <p>Fill in the form below to register for the event.</p>
+                <p>Fill in the Form below to Register for the Event.</p>
             </div>
             <form id="registrationForm" class="needs-validation" novalidate>
                 <div class="mb-3">
@@ -89,7 +89,7 @@
                     <input type="checkbox" class="form-check-input" id="terms" required>
                     <label class="form-check-label" for="terms">I agree to the terms and conditions</label>
                     <div class="invalid-feedback">
-                        You must agree to the terms and conditions.
+                        You must agree to the Terms and Conditions.
                     </div>
                 </div>
       <div class="mb-3 form-check">
